# mourat

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_linters.sh
config/: config_assess_candidate_topic.yaml  config_collect_newest_papers.yaml  config_collect_recent_influential_papers.yaml  config_generate_queries.yaml  config_print_reddit_summary.yaml  config_run_pipeline.yaml
config/binary_paper_classifier/: relevance_via_llm.yaml
config/candidate_topic_assessor/: candidate_topic_assessor.yaml
config/collector/: arxiv.yaml  arxiv_rss_cs_lg.yaml  semantic_scholar.yaml
config/llm/: caila_o3_mini.yaml  local.yaml
config/monitoring_handler/: via_md_files.yaml
config/paper_assigner/: paper_assigner.yaml
config/paper_filter/: by_score.yaml
config/paper_scorer/: scorer_via_llm.yaml
config/query_generator/: query_generator_via_llm.yaml
config/user_settings/: user_settings.yaml
mourat/: monitoring.py  pipeline.py
mourat/scripts/: assess_candidate_topic.py  collect_newest_papers.py  collect_recent_influential_papers.py  generate_queries.py  print_reddit_summary.py  run_pipeline.py
mourat/utils/: common.py
